force-app/main/default/objects/GSA_Project__c/GSA_Project__c.object-meta.xml
<CustomObject>
    <label>GSA Project</label>
    <nameField>
        <label>GSA Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GSA Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>