force-app/main/default/objects/GSA_Project__c/fields/Actual_DM__c.field-meta.xml
<CustomField>
    <fullName>Actual_DM__c</fullName>
    <formula>1- (Actual_Costs__c / Actual_Revenue__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual DM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>