force-app/main/default/objects/GSA_Project__c/fields/Actual_Net_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Actual_Net_Revenue__c</fullName>
    <formula>Actual_Revenue__c - Actual_Costs__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Net Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>