force-app/main/default/objects/GSA_Project__c/fields/Business_Designation__c.field-meta.xml
<CustomField>
    <fullName>Business_Designation__c</fullName>
    <label>Business Designation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Main</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>