force-app/main/default/objects/GSA_Project__c/fields/CLIN__c.field-meta.xml
<CustomField>
    <fullName>CLIN__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CLIN</label>
    <referenceTo>GSA_CLIN__c</referenceTo>
    <relationshipLabel>GSA Projects</relationshipLabel>
    <relationshipName>GSA_Projects</relationshipName>
    <type>Lookup</type>
</CustomField>