force-app/main/default/objects/GSA_Project__c/fields/Forecasted_Costs__c.field-meta.xml
<CustomField>
    <fullName>Forecasted_Costs__c</fullName>
    <label>Forecasted Costs</label>
    <summarizedField>GSA_Project_Cost__c.Cost__c</summarizedField>
    <summaryFilterItems>
        <field>GSA_Project_Cost__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Forecast</value>
    </summaryFilterItems>
    <summaryForeignKey>GSA_Project_Cost__c.GSA_Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>