force-app/main/default/objects/GSA_Project__c/fields/Forecasted_DM__c.field-meta.xml
<CustomField>
    <fullName>Forecasted_DM__c</fullName>
    <formula>1- (Forecasted_Costs__c / Forecasted_Revenue__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Forecasted DM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>