force-app/main/default/objects/GSA_Project__c/fields/Forecasted_Net_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Forecasted_Net_Revenue__c</fullName>
    <formula>Forecasted_Revenue__c -  Forecasted_Costs__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Forecasted Net Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>