force-app/main/default/objects/GSA_Project__c/fields/Forecasted_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Forecasted_Revenue__c</fullName>
    <label>Forecasted Revenue</label>
    <summarizedField>GSA_Project_Revenue__c.Revenue__c</summarizedField>
    <summaryFilterItems>
        <field>GSA_Project_Revenue__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Forecast</value>
    </summaryFilterItems>
    <summaryForeignKey>GSA_Project_Revenue__c.GSA_Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>