force-app/main/default/objects/GSA_Project__c/fields/Project_Manager__c.field-meta.xml
<CustomField>
    <fullName>Project_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Manager</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>GSA Projects</relationshipLabel>
    <relationshipName>GSA_Projects</relationshipName>
    <type>Lookup</type>
</CustomField>