force-app/main/default/objects/GSA_Project__c/fields/Task__c.field-meta.xml
<CustomField>
    <fullName>Task__c</fullName>
    <label>Task</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Task 1</fullName>
            </value>
            <value>
                <fullName>Task 2</fullName>
            </value>
            <value>
                <fullName>Task 3</fullName>
            </value>
            <value>
                <fullName>Task 4</fullName>
            </value>
            <value>
                <fullName>Task 5</fullName>
            </value>
            <value>
                <fullName>Task 6</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>