force-app/main/default/objects/GSA_Project__c/fields/Unanet_Project_Code__c.field-meta.xml
<CustomField>
    <fullName>Unanet_Project_Code__c</fullName>
    <label>Unanet Project Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>