force-app/main/default/objects/GSA_Project__c/fields/Unanet_Project_Code_Long__c.field-meta.xml
<CustomField>
    <fullName>Unanet_Project_Code_Long__c</fullName>
    <label>Unanet Project Code -- Long</label>
    <length>255</length>
    <type>Text</type>
</CustomField>