force-app/main/default/objects/GSA_Project__c/fields/Unanet_Project_Organization__c.field-meta.xml
<CustomField>
    <fullName>Unanet_Project_Organization__c</fullName>
    <label>Unanet Project Organization</label>
    <length>25</length>
    <type>Text</type>
</CustomField>