force-app/main/default/objects/GSA_Project__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CLIN__c</columns>
    <columns>Project_Manager__c</columns>
    <columns>Project_Start_Date__c</columns>
    <columns>Project_End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>